# bitcoin-mining-pool

./: .gitignore  README.md  ai_chat.txt  log.txt  pyproject.toml  requirements.txt
config/: config_sample.ini
doc/: README.md  Tree_all.txt  pool.md  stratum_server.md
src/: main.py
src/config/: settings.py
src/core/: bitcoin_rpc.py  pool.py  stratum_server.py
src/miners/: connection.py  manager.py
src/protocols/: stratum.py
src/utils/: helper.py  logging.py
